😊 finished bus, school, pilot

--- a/src/Blazor.Server.UI/Pages/Pilots/Pilots.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/Pilots.razor
@@ -297,7 +297,7 @@
 
     private async Task OnCreate()
     {
-        var command = new AddEditPilotCommand();
+        var command = new AddEditPilotCommand() {ProfilePicture="/img/driver.webp",  Status="OK" };
         var parameters = new DialogParameters
             {
                 { nameof(_PilotFormDialog.model),command },
