--- a/src/Blazor.Server.UI/Pages/Buses/Buses.razor
+++ b/src/Blazor.Server.UI/Pages/Buses/Buses.razor
@@ -190,8 +190,14 @@
                 </div>
             </CellTemplate>
         </PropertyColumn>
-        <PropertyColumn Property="x => x.DeviceId" Title="@L[_currentDto.GetMemberDescription(x=>x.DeviceId)]" />
-        <PropertyColumn Property="x => x.Status" Title="@L[_currentDto.GetMemberDescription(x=>x.Status)]" />
+        <PropertyColumn Property="x => x.Status" Title="@L[_currentDto.GetMemberDescription(x=>x.Status)]">
+            <CellTemplate>
+                <div class="d-flex flex-column">
+                    <MudText Typo="Typo.body2">@context.Item.Status</MudText>
+                    <MudText Typo="Typo.body2">@context.Item.DeviceId</MudText>
+                </div>
+            </CellTemplate>
+        </PropertyColumn>
     </Columns>
     <NoRecordsContent>
         <MudText>@ConstantString.NoRecords</MudText>
@@ -288,7 +294,7 @@
 
     private async Task OnCreate()
     {
-        var command = new AddEditBusCommand();
+        var command = new AddEditBusCommand() { Status="OK" };
         var parameters = new DialogParameters
             {
                 { nameof(_BusFormDialog.model),command },
