--- a/src/Blazor.Server.UI/Pages/Identity/Users/Profile.razor
+++ b/src/Blazor.Server.UI/Pages/Identity/Users/Profile.razor
@@ -42,25 +42,31 @@
                                 else
                                 {
                                     <MudElement Class="d-flex flex-column  align-center">
-                                        <MudAvatar Image="@model.ProfilePictureDataUrl" Style="height:128px; width:128px; font-size:2rem;" />
+                                        <MudAvatar  Style="height:128px; width:128px; font-size:2rem;" >
+                                                <MudImage Src="@model.ProfilePictureDataUrl"></MudImage>
+                                        </MudAvatar>
                                         <div class="d-flex">
                                             @if (model.AssignedRoles is not null)
                                             {
                                                 @foreach (var role in model.AssignedRoles)
                                                 {
-                                                                <MudChip Size="MudBlazor.Size.Small">@role</MudChip>
+                                                   <MudChip Size="MudBlazor.Size.Small">@role</MudChip>
                                                 }
                                             }
                                         </div>
                                     </MudElement>
                                 }
-                                <MudTooltip Text="@L["Click upload a photo."]">
-                                    <InputFile id="UploadPhoto" OnChange="UploadPhoto" hidden accept=".jpg, .jpeg, .png" />
-                                    <MudIconButton HtmlTag="label"
-                                                   Color="MudBlazor.Color.Info"
-                                                   Icon="@Icons.Material.Filled.PhotoCamera"
-                                                   for="UploadPhoto"></MudIconButton>
-                                </MudTooltip>
+                                    <MudTooltip Text="@L["Click upload a image."]">
+                                        <MudFileUpload T="IBrowserFile" Accept=".jpg, .jpeg, .png, .webp" FilesChanged="UploadPhoto" Style="margin-top:-10px;margin-left:-15px">
+                                            <ButtonTemplate>
+                                                <MudIconButton HtmlTag="label"
+                                                               Icon="@Icons.Material.Filled.PhotoCamera"
+                                                               for="@context">
+                                                </MudIconButton>
+                                            </ButtonTemplate>
+                                        </MudFileUpload>
+                                    </MudTooltip>
+                                 
                             </div>
                         </MudItem>
                         <MudItem sm="6" xs="12">
@@ -244,9 +250,9 @@
             StateHasChanged();
         });
     }
-    private async Task UploadPhoto(InputFileChangeEventArgs e)
+    private async Task UploadPhoto(IBrowserFile file)
     {
-        var filestream = e.File.OpenReadStream(GlobalVariable.MaxAllowedSize);
+        var filestream = file.OpenReadStream(GlobalVariable.MaxAllowedSize);
         var imgstream = new MemoryStream();
         await filestream.CopyToAsync(imgstream);
         imgstream.Position = 0;
@@ -256,10 +262,7 @@
             {
                 image.Mutate(i => i.Resize(new ResizeOptions() { Mode = SixLabors.ImageSharp.Processing.ResizeMode.Crop, Size = new SixLabors.ImageSharp.Size(128, 128) }));
                 image.Save(outStream, SixLabors.ImageSharp.Formats.Png.PngFormat.Instance);
-                var filename = e.File.Name;
-                var fi = new FileInfo(filename);
-                var ext = fi.Extension;
-                var result = await _uploadService.UploadAsync(new UploadRequest(Guid.NewGuid().ToString() + ext, UploadType.ProfilePicture, outStream.ToArray()));
+                var result = await _uploadService.UploadAsync(new UploadRequest(Guid.NewGuid().ToString() + ".png", UploadType.ProfilePicture, outStream.ToArray()));
                 model.ProfilePictureDataUrl = result;
                 var user = await _userManager.FindByIdAsync(model.UserId!);
                 user!.ProfilePictureDataUrl = model.ProfilePictureDataUrl;
