--- a/src/Blazor.Server.UI/Pages/Buses/_BusFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Buses/_BusFormDialog.razor
@@ -1,4 +1,5 @@
-﻿@using CleanArchitecture.Blazor.Application.Features.Buses.Commands.AddEdit
+﻿@using CleanArchitecture.Blazor.Application.Common.Interfaces.MultiTenant;
+@using CleanArchitecture.Blazor.Application.Features.Buses.Commands.AddEdit
 
 @inherits MudComponentBase
 @inject IStringLocalizer<Buses> L
@@ -20,6 +21,21 @@
                 <MudItem xs="12" md="6">
                     <MudTextField ReadOnly Label="@L[model.GetMemberDescription(x=>x.Status)]" @bind-Value="model.Status" For="@(() => model.Status)" ></MudTextField>
                 </MudItem>
+                 @if (UserProfile.IsSuperAdmin)
+                {
+                    <MudItem xs="12" md="12">
+                        <MudSelect For="@(() => model.TenantId)"
+                                   Label="@L["Select Organization"]"
+                                   Required="true"
+                                   RequiredError="@L["Organization is required."]"
+                        @bind-Value="@model.TenantId">
+                            @foreach (var item in TenantsService.DataSource)
+                            {
+                                <MudSelectItem Value="@item.Id">@item.Name</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                }
             </MudGrid>
         </MudForm>
     </DialogContent>
@@ -39,6 +55,9 @@
     AddEditBusCommandValidator _modelValidator = new();
     [EditorRequired][Parameter] public AddEditBusCommand model { get; set; } = null!;
     [Inject] private IMediator _mediator { get; set; } = default!;
+    [Parameter] public UserProfile UserProfile { get; set; } = null!;
+    [Inject]
+    private ITenantService TenantsService { get; set; } = default!;
     async Task Submit()
     {
         try
