--- a/src/Blazor.Server.UI/Pages/Students/Students.razor
+++ b/src/Blazor.Server.UI/Pages/Students/Students.razor
@@ -201,14 +201,33 @@
         </PropertyColumn>
         <PropertyColumn Property="x => x.Status" Title="@L[_currentDto.GetMemberDescription(x=>x.Status)]" />
         <PropertyColumn Property="x => x.Parents" Title="@L[_currentDto.GetMemberDescription(x=>x.Parents)]">
-            <CellTemplate></CellTemplate>
+            <CellTemplate>
+                <MudAvatarGroup Max="2" Spacing="3" MaxColor="Color.Primary">
+                    @foreach(var item in context.Item.Parents)
+                    {
+                        <MudAvatar>
+                            <MudImage Src="@item.ProfilePicture"></MudImage>
+                        </MudAvatar>
+                    }
+                </MudAvatarGroup>
+            </CellTemplate>
         </PropertyColumn>
         <PropertyColumn Property="x => x.SchoolId" Title="@L[_currentDto.GetMemberDescription(x=>x.SchoolId)]">
             <CellTemplate>
                 @context.Item.School.Name
             </CellTemplate>
         </PropertyColumn>
-
+        @if (UserProfile.IsSuperAdmin)
+        {
+            <PropertyColumn Property="x => x.Tenant" Title="@L[_currentDto.GetMemberDescription(x=>x.Tenant)]">
+                <CellTemplate>
+                    <div class="d-flex flex-column">
+                        <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
+                        <MudText Typo="Typo.body2">@context.Item.TenantId</MudText>
+                    </div>
+                </CellTemplate>
+            </PropertyColumn>
+        }
     </Columns>
     <NoRecordsContent>
         <MudText>@ConstantString.NoRecords</MudText>
@@ -305,9 +324,10 @@
 
     private async Task OnCreate()
     {
-        var command = new AddEditStudentCommand();
+        var command = new AddEditStudentCommand() { ProfilePicture="/img/kid.webp", TenantId = UserProfile.TenantId, Status="OK"};
         var parameters = new DialogParameters
             {
+                { nameof(_StudentFormDialog.UserProfile),UserProfile },
                 { nameof(_StudentFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
@@ -327,12 +347,15 @@
                 FirstName = copyitem.FirstName,
                 LastName = copyitem.LastName,
                 Phone = copyitem.Phone,
-                ProfilePicture = "",
+                ProfilePicture = "/img/kid.webp",
                 Status = "",
+                UID="",
+                TenantId=copyitem.TenantId,
                 Description = copyitem.Description,
             };
         var parameters = new DialogParameters
             {
+                { nameof(_StudentFormDialog.UserProfile),UserProfile },
                 { nameof(_StudentFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
@@ -350,6 +373,7 @@
         var command = Mapper.Map<AddEditStudentCommand>(dto);
         var parameters = new DialogParameters
             {
+                { nameof(_StudentFormDialog.UserProfile),UserProfile },
                 { nameof(_StudentFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
