--- a/src/Blazor.Server.UI/Pages/Itineraries/Itineraries.razor
+++ b/src/Blazor.Server.UI/Pages/Itineraries/Itineraries.razor
@@ -160,12 +160,13 @@
         <PropertyColumn Property="x => x.Name" Title="@L[_currentDto.GetMemberDescription(x=>x.Name)]">
             <CellTemplate>
                 <div class="d-flex flex-column">
-                    <div class="d-flex flex-row">
+                    <div class="d-flex flex-row gap-1">
                         <MudText Typo="Typo.body2">@context.Item.StartingStation</MudText>
                         <MudText Typo="Typo.body2"> - </MudText>
                         <MudText Typo="Typo.body2">@context.Item.TerminalStation</MudText>
                     </div>
-                    <div class="d-flex flex-row">
+                    <div class="d-flex flex-row gap-1">
+                        <MudText Typo="Typo.body2" Style="color:var(--mud-palette-text-secondary) !important">@L["Time: "]</MudText>
                         <MudText Typo="Typo.body2">@context.Item.FirstTime</MudText>
                         <MudText Typo="Typo.body2"> - </MudText>
                         <MudText Typo="Typo.body2">@context.Item.LastTime</MudText>
@@ -206,7 +207,17 @@
             <CellTemplate>@context.Item.Disabled</CellTemplate>
         </PropertyColumn>
 
-
+        @if (UserProfile.IsSuperAdmin)
+        {
+            <PropertyColumn Property="x => x.Tenant" Title="@L[_currentDto.GetMemberDescription(x=>x.Tenant)]">
+                <CellTemplate>
+                    <div class="d-flex flex-column">
+                        <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
+                        <MudText Typo="Typo.body2">@context.Item.TenantId</MudText>
+                    </div>
+                </CellTemplate>
+            </PropertyColumn>
+        }
 
     </Columns>
     <NoRecordsContent>
@@ -304,9 +315,10 @@
 
     private async Task OnCreate()
     {
-        var command = new AddEditItineraryCommand();
+        var command = new AddEditItineraryCommand() { TenantId=UserProfile.TenantId};
         var parameters = new DialogParameters
             {
+                { nameof(_ItineraryFormDialog.UserProfile),UserProfile },
                 { nameof(_ItineraryFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
@@ -323,11 +335,19 @@
         var copyitem = _selectedItems.First();
         var command = new AddEditItineraryCommand()
             {
-                Name = copyitem.Name,
+                 StartingStation=copyitem.StartingStation,
+                 TerminalStation=copyitem.TerminalStation,
+                  BusId=copyitem.BusId,
+                   SchoolId=copyitem.SchoolId,
+                    FirstTime=copyitem.FirstTime,
+                    LastTime=copyitem.LastTime,
+                     PilotId=copyitem.PilotId,
+                    TenantId=copyitem.TenantId,
                 Description = copyitem.Description,
             };
         var parameters = new DialogParameters
             {
+                { nameof(_ItineraryFormDialog.UserProfile),UserProfile },
                 { nameof(_ItineraryFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
@@ -345,6 +365,7 @@
         var command = Mapper.Map<AddEditItineraryCommand>(dto);
         var parameters = new DialogParameters
             {
+                { nameof(_ItineraryFormDialog.UserProfile),UserProfile },
                 { nameof(_ItineraryFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
