--- a/src/Blazor.Server.UI/Pages/Itineraries/_ItineraryFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Itineraries/_ItineraryFormDialog.razor
@@ -1,4 +1,6 @@
-﻿@using CleanArchitecture.Blazor.Application.Features.Itineraries.Commands.AddEdit
+﻿@using CleanArchitecture.Blazor.Application.Common.Interfaces.MultiTenant;
+@using CleanArchitecture.Blazor.Application.Features.Itineraries.Commands.AddEdit
+@using CleanArchitecture.Blazor.Application.Services.DataServices;
 
 @inherits MudComponentBase
 @inject IStringLocalizer<Itineraries> L
@@ -7,27 +9,46 @@
     <DialogContent>
         <MudForm Model="@model" @ref="@_form" Validation="@(_modelValidator.ValidateValue)">
             <MudGrid>
-                @*TODO: define mudform that should be edit fields, for example:*@
-                <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.Name)]" @bind-Value="model.Name" For="@(() => model.Name)" Required="true" RequiredError="@L["name is required!"]"></MudTextField>
+
+                <MudItem xs="12" md="4">
+                    <MudSelect For="@(() => model.SchoolId)"
+                               Label="@L[model.GetMemberDescription(x=>x.SchoolId)]"
+                               Required="true"
+                               RequiredError="@L["School is required."]"
+                    @bind-Value="@model.SchoolId">
+                        @foreach (var item in SchoolService.DataSource.Where(x => x.TenantId == model.TenantId))
+                        {
+                            <MudSelectItem T="int?" Value="@item.Id">@item.Name</MudSelectItem>
+                        }
+                    </MudSelect>
+
                 </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.Description)]" Lines="3" For="@(() => model.Description)" @bind-Value="model.Description"></MudTextField>
+
+                <MudItem xs="12" md="4">
+                    <MudSelect For="@(() => model.BusId)"
+                               Label="@L[model.GetMemberDescription(x=>x.BusId)]"
+                               Required="true"
+                               RequiredError="@L["Bus is required."]"
+                    @bind-Value="@model.BusId">
+                        @foreach (var item in BusService.DataSource.Where(x => x.TenantId == model.TenantId))
+                        {
+                            <MudSelectItem T="int?" Value="@item.Id">@item.PlatNumber</MudSelectItem>
+                        }
+                    </MudSelect>
+                    
                 </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudNumericField Label="@L[model.GetMemberDescription(x=>x.BusId)]" @bind-Value="model.BusId" For="@(() => model.BusId)" Min="0" Required="false" RequiredError="@L["bus id is required!"]"></MudNumericField>
-                </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudNumericField Label="@L[model.GetMemberDescription(x=>x.PilotId)]" @bind-Value="model.PilotId" For="@(() => model.PilotId)" Min="0" Required="false" RequiredError="@L["pilot id is required!"]"></MudNumericField>
-                </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudNumericField Label="@L[model.GetMemberDescription(x=>x.SchoolId)]" @bind-Value="model.SchoolId" For="@(() => model.SchoolId)" Min="0" Required="false" RequiredError="@L["school id is required!"]"></MudNumericField>
-                </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.FirstTime)]" @bind-Value="model.FirstTime" For="@(() => model.FirstTime)" Required="false" RequiredError="@L["first time is required!"]"></MudTextField>
-                </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.LastTime)]" @bind-Value="model.LastTime" For="@(() => model.LastTime)" Required="false" RequiredError="@L["last time is required!"]"></MudTextField>
+                <MudItem xs="12" md="4">
+                    <MudSelect For="@(() => model.PilotId)"
+                               Label="@L[model.GetMemberDescription(x=>x.PilotId)]"
+                               Required="true"
+                               RequiredError="@L["Pilot is required."]"
+                    @bind-Value="@model.PilotId">
+                        @foreach (var item in PilotService.DataSource.Where(x => x.TenantId == model.TenantId))
+                        {
+                            <MudSelectItem Class="d-flex align-items-center" T="int?" Value="@item.Id"><MudAvatar Size="Size.Small" Style="height:14px;width:14px" Class="mr-1"><MudImage Src="@item.ProfilePicture" Height="14" /></MudAvatar>  @item.DisplayName</MudSelectItem>
+                        }
+                    </MudSelect>
+                 
                 </MudItem>
                 <MudItem xs="12" md="6">
                     <MudTextField Label="@L[model.GetMemberDescription(x=>x.StartingStation)]" @bind-Value="model.StartingStation" For="@(() => model.StartingStation)" Required="false" RequiredError="@L["starting station is required!"]"></MudTextField>
@@ -36,17 +57,40 @@
                     <MudTextField Label="@L[model.GetMemberDescription(x=>x.TerminalStation)]" @bind-Value="model.TerminalStation" For="@(() => model.TerminalStation)" Required="false" RequiredError="@L["terminal station is required!"]"></MudTextField>
                 </MudItem>
                 <MudItem xs="12" md="6">
+                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.FirstTime)]" @bind-Value="model.FirstTime" For="@(() => model.FirstTime)" Required="true" RequiredError="@L["first time is required!"]"></MudTextField>
+                </MudItem>
+                <MudItem xs="12" md="6">
+                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.LastTime)]" @bind-Value="model.LastTime" For="@(() => model.LastTime)" Required="true" RequiredError="@L["last time is required!"]"></MudTextField>
+                </MudItem>
+                <MudItem xs="12" md="12">
+                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.Description)]" For="@(() => model.Description)" @bind-Value="model.Description"></MudTextField>
+                </MudItem>
+                <MudItem xs="12" md="6">
                     <MudCheckBox Label="@L[model.GetMemberDescription(x=>x.Disabled)]" @bind-Checked="model.Disabled" For="@(() => model.Disabled)"></MudCheckBox>
                 </MudItem>
 
-
+                @if (UserProfile.IsSuperAdmin)
+                {
+                    <MudItem xs="12" md="6">
+                        <MudSelect For="@(() => model.TenantId)"
+                                   Label="@L["Select Organization"]"
+                                   Required="true"
+                                   RequiredError="@L["Organization is required."]"
+                        @bind-Value="@model.TenantId">
+                            @foreach (var item in TenantsService.DataSource)
+                            {
+                                <MudSelectItem Value="@item.Id">@item.Name</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                }
             </MudGrid>
         </MudForm>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">@ConstantString.Cancel</MudButton>
         <MudLoadingButton Loading="@_savingnew" OnClick="SaveAndNew">@ConstantString.SaveAndNew</MudLoadingButton>
-        <MudButton Loading="@_saving" Color="MudBlazor.Color.Primary" OnClick="Submit">@ConstantString.Save</MudButton>
+        <MudLoadingButton Loading="@_saving"  OnClick="Submit">@ConstantString.Save</MudLoadingButton>
     </DialogActions>
 </MudDialog>
 
@@ -59,6 +103,15 @@
     AddEditItineraryCommandValidator _modelValidator = new();
     [EditorRequired][Parameter] public AddEditItineraryCommand model { get; set; } = null!;
     [Inject] private IMediator _mediator { get; set; } = default!;
+    [Inject]
+    private ITenantService TenantsService { get; set; } = default!;
+    [Inject]
+    private IBusService BusService { get; set; } = default!;
+    [Inject]
+    private IPilotService PilotService { get; set; } = default!;
+    [Inject]
+    private ISchoolService SchoolService { get; set; } = default!;
+    [Parameter] public UserProfile UserProfile { get; set; } = null!;
     async Task Submit()
     {
         try
