--- a/src/Blazor.Server.UI/Pages/Pilots/Pilots.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/Pilots.razor
@@ -9,6 +9,7 @@
 @using CleanArchitecture.Blazor.Application.Features.Pilots.Queries.Export
 @using CleanArchitecture.Blazor.Application.Features.Pilots.Queries.Pagination
 @using CleanArchitecture.Blazor.Application.Features.Pilots.Commands.AddEdit
+@using CleanArchitecture.Blazor.Application.Services.DataServices;
 
 @inherits FluxorComponent
 @inject IJSRuntime JS
@@ -200,7 +201,17 @@
             </CellTemplate>
         </PropertyColumn>
         <PropertyColumn Property="x => x.Status" Title="@L[_currentDto.GetMemberDescription(x=>x.Status)]" />
-
+        @if (UserProfile.IsSuperAdmin)
+        {
+            <PropertyColumn Property="x => x.Tenant" Title="@L[_currentDto.GetMemberDescription(x=>x.Tenant)]">
+                <CellTemplate>
+                    <div class="d-flex flex-column">
+                        <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
+                        <MudText Typo="Typo.body2">@context.Item.TenantId</MudText>
+                    </div>
+                </CellTemplate>
+            </PropertyColumn>
+        }
     </Columns>
     <NoRecordsContent>
         <MudText>@ConstantString.NoRecords</MudText>
@@ -235,6 +246,8 @@
     private IMapper Mapper { get; set; } = default!;
     [CascadingParameter]
     private Task<AuthenticationState> AuthState { get; set; } = default!;
+    [Inject]
+    private IPilotService PilotService{ get; set; }
 
     private PilotsWithPaginationQuery Query { get; set; } = new();
     [Inject]
@@ -292,14 +305,16 @@
         PilotCacheKey.Refresh();
         _selectedItems = new();
         Query.Keyword = string.Empty;
+        await  PilotService.Refresh();
         await _table.ReloadServerData();
     }
 
     private async Task OnCreate()
     {
-        var command = new AddEditPilotCommand() {ProfilePicture="/img/driver.webp",  Status="OK" };
+        var command = new AddEditPilotCommand() { TenantId=UserProfile.TenantId, ProfilePicture="/img/driver.webp",  Status="OK" };
         var parameters = new DialogParameters
             {
+                { nameof(_PilotFormDialog.UserProfile),UserProfile },
                 { nameof(_PilotFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
@@ -319,12 +334,14 @@
                 FirstName = copyitem.FirstName,
                 LastName = copyitem.LastName,
                 Phone = copyitem.Phone,
-                ProfilePicture = "",
+                ProfilePicture = "/img/driver.webp",
                 Status = "",
+                TenantId = copyitem.TenantId,
                 Description = copyitem.Description,
             };
         var parameters = new DialogParameters
             {
+                { nameof(_PilotFormDialog.UserProfile),UserProfile },
                 { nameof(_PilotFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
@@ -342,6 +359,7 @@
         var command = Mapper.Map<AddEditPilotCommand>(dto);
         var parameters = new DialogParameters
             {
+                { nameof(_PilotFormDialog.UserProfile),UserProfile },
                 { nameof(_PilotFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
