--- a/src/Blazor.Server.UI/Pages/Schools/_SchoolFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Schools/_SchoolFormDialog.razor
@@ -1,4 +1,5 @@
-﻿@using CleanArchitecture.Blazor.Application.Features.Schools.Commands.AddEdit
+﻿@using CleanArchitecture.Blazor.Application.Common.Interfaces.MultiTenant;
+@using CleanArchitecture.Blazor.Application.Features.Schools.Commands.AddEdit
 
 @inherits MudComponentBase
 @inject IStringLocalizer<Schools> L
@@ -20,9 +21,21 @@
                 <MudItem xs="12" md="6">
                     <MudTextField Label="@L[model.GetMemberDescription(x=>x.Phone)]" @bind-Value="model.Phone" For="@(() => model.Phone)" Required="false" RequiredError="@L["phone is required!"]"></MudTextField>
                 </MudItem>
-             @*    <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.TenantId)]" @bind-Value="model.TenantId" For="@(() => model.TenantId)" Required="false" RequiredError="@L["tenant id is required!"]"></MudTextField>
-                </MudItem> *@
+                @if (UserProfile.IsSuperAdmin)
+                {
+                    <MudItem xs="12" md="12">
+                        <MudSelect For="@(() => model.TenantId)"
+                                   Label="@L["Select Organization"]"
+                                   Required="true"
+                                   RequiredError="@L["Organization is required."]"
+                                   @bind-Value="@model.TenantId"    >
+                            @foreach (var item in TenantsService.DataSource)
+                            {
+                                <MudSelectItem Value="@item.Id">@item.Name</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                }
             </MudGrid>
         </MudForm>
     </DialogContent>
@@ -41,7 +54,11 @@
     MudDialogInstance MudDialog { get; set; } = default!;
     AddEditSchoolCommandValidator _modelValidator = new();
     [EditorRequired][Parameter] public AddEditSchoolCommand model { get; set; } = null!;
+    
     [Inject] private IMediator _mediator { get; set; } = default!;
+    [Parameter] public UserProfile UserProfile { get; set; } = null!;
+    [Inject]
+    private ITenantService TenantsService { get; set; } = default!;
     async Task Submit()
     {
         try
