--- a/src/Blazor.Server.UI/Pages/Students/_StudentFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Students/_StudentFormDialog.razor
@@ -1,4 +1,8 @@
-﻿@using CleanArchitecture.Blazor.Application.Features.Students.Commands.AddEdit
+﻿@using CleanArchitecture.Blazor.Application.Common.Interfaces.MultiTenant;
+@using CleanArchitecture.Blazor.Application.Features.Students.Commands.AddEdit
+@using CleanArchitecture.Blazor.Application.Services.DataServices;
+@using shortid;
+@using shortid.Configuration;
 
 @inherits MudComponentBase
 @inject IStringLocalizer<Students> L
@@ -7,34 +11,73 @@
     <DialogContent>
         <MudForm Model="@model" @ref="@_form" Validation="@(_modelValidator.ValidateValue)">
             <MudGrid>
-                @*TODO: define mudform that should be edit fields, for example:*@
-                <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.UID)]" @bind-Value="model.UID" For="@(() => model.UID)" Required="false" RequiredError="@L["uid is required!"]"></MudTextField>
+                <MudItem sm="12" xs="12">
+                    <div class="d-flex justify-center">
+                        <MudElement Class="d-flex flex-column  align-center">
+                            <MudAvatar Style="height:128px; width:128px; font-size:2rem;">
+                                <MudImage Src="@model.ProfilePicture"></MudImage>
+                            </MudAvatar>
+                        </MudElement>
+
+                        <MudTooltip Text="@L["Click upload a image."]">
+                            <MudFileUpload T="IBrowserFile" Accept=".jpg, .jpeg, .png, .webp" FilesChanged="UploadProfileImage" Style="margin-top:-10px;margin-left:-15px">
+                                <ButtonTemplate>
+                                    <MudIconButton HtmlTag="label"
+                                                   Icon="@Icons.Material.Filled.PhotoCamera"
+                                                   for="@context">
+                                    </MudIconButton>
+                                </ButtonTemplate>
+                            </MudFileUpload>
+                        </MudTooltip>
+                    </div>
                 </MudItem>
                 <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.LastName)]" @bind-Value="model.LastName" For="@(() => model.LastName)" Required="false" RequiredError="@L["last name is required!"]"></MudTextField>
+                    <MudSelect For="@(() => model.SchoolId)"
+                               Label="@L[model.GetMemberDescription(x=>x.SchoolId)]"
+                               Required="true"
+                               RequiredError="@L["School is required."]"
+                    @bind-Value="@model.SchoolId">
+                        @foreach (var item in SchoolService.DataSource.Where(x => x.TenantId == model.TenantId))
+                        {
+                            <MudSelectItem T="int?" Value="@item.Id">@item.Name</MudSelectItem>
+                        }
+                    </MudSelect>
+                </MudItem>
+                <MudItem xs="12" md="6">
+                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.UID)]" @bind-Value="model.UID" For="@(() => model.UID)" Required="true" RequiredError="@L["uid is required!"]" OnAdornmentClick="GenerateUID" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.AutoFixNormal"></MudTextField>
+                </MudItem>
+                <MudItem xs="12" md="6">
+                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.LastName)]" @bind-Value="model.LastName" For="@(() => model.LastName)" Required="true" RequiredError="@L["last name is required!"]"></MudTextField>
                 </MudItem>
                 <MudItem xs="12" md="6">
                     <MudTextField Label="@L[model.GetMemberDescription(x=>x.FirstName)]" @bind-Value="model.FirstName" For="@(() => model.FirstName)" Required="false" RequiredError="@L["first name is required!"]"></MudTextField>
                 </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.ProfilePicture)]" @bind-Value="model.ProfilePicture" For="@(() => model.ProfilePicture)" Required="false" RequiredError="@L["profile picture is required!"]"></MudTextField>
-                </MudItem>
+              
                 <MudItem xs="12" md="6">
                     <MudTextField Label="@L[model.GetMemberDescription(x=>x.Phone)]" @bind-Value="model.Phone" For="@(() => model.Phone)" Required="false" RequiredError="@L["phone is required!"]"></MudTextField>
                 </MudItem>
                 <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.Description)]" Lines="3" For="@(() => model.Description)" @bind-Value="model.Description"></MudTextField>
+                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.Description)]" For="@(() => model.Description)" @bind-Value="model.Description"></MudTextField>
                 </MudItem>
                 <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.Status)]" @bind-Value="model.Status" For="@(() => model.Status)" Required="false" RequiredError="@L["status is required!"]"></MudTextField>
+                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.Status)]" @bind-Value="model.Status" For="@(() => model.Status)"  ReadOnly></MudTextField>
                 </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudNumericField Label="@L[model.GetMemberDescription(x=>x.SchoolId)]" @bind-Value="model.SchoolId" For="@(() => model.SchoolId)" Min="0" Required="false" RequiredError="@L["school id is required!"]"></MudNumericField>
-                </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudTextField Label="@L[model.GetMemberDescription(x=>x.TenantId)]" @bind-Value="model.TenantId" For="@(() => model.TenantId)" Required="false" RequiredError="@L["tenant id is required!"]"></MudTextField>
-                </MudItem>
+               
+                @if (UserProfile.IsSuperAdmin)
+                {
+                    <MudItem xs="12" md="6">
+                        <MudSelect For="@(() => model.TenantId)"
+                                   Label="@L["Select Organization"]"
+                                   Required="true"
+                                   RequiredError="@L["Organization is required."]"
+                        @bind-Value="@model.TenantId">
+                            @foreach (var item in TenantsService.DataSource)
+                            {
+                                <MudSelectItem Value="@item.Id">@item.Name</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                }
 
             </MudGrid>
         </MudForm>
@@ -42,7 +85,7 @@
     <DialogActions>
         <MudButton OnClick="Cancel">@ConstantString.Cancel</MudButton>
         <MudLoadingButton Loading="@_savingnew" OnClick="SaveAndNew">@ConstantString.SaveAndNew</MudLoadingButton>
-        <MudButton Loading="@_saving" Color="MudBlazor.Color.Primary" OnClick="Submit">@ConstantString.Save</MudButton>
+        <MudLoadingButton Loading="@_saving"  OnClick="Submit">@ConstantString.Save</MudLoadingButton>
     </DialogActions>
 </MudDialog>
 
@@ -55,6 +98,36 @@
     AddEditStudentCommandValidator _modelValidator = new();
     [EditorRequired][Parameter] public AddEditStudentCommand model { get; set; } = null!;
     [Inject] private IMediator _mediator { get; set; } = default!;
+    [Parameter] public UserProfile UserProfile { get; set; } = null!;
+    [Inject] private IUploadService _uploadService { get; set; } = default!;
+    [Inject]
+    private ITenantService TenantsService { get; set; } = default!;
+    [Inject]
+    private ISchoolService SchoolService { get; set; } = default!;
+    void GenerateUID()
+    {
+        var uid = ShortId.Generate(new GenerationOptions(length: 8));
+        model.UID = uid;
+    }
+    private async Task UploadProfileImage(IBrowserFile file)
+    {
+        var filestream = file.OpenReadStream(GlobalVariable.MaxAllowedSize);
+        var imgstream = new MemoryStream();
+        await filestream.CopyToAsync(imgstream);
+        imgstream.Position = 0;
+        using (var outStream = new MemoryStream())
+        {
+            using (var image = Image.Load(imgstream))
+            {
+                image.Mutate(i => i.Resize(new ResizeOptions() { Mode = SixLabors.ImageSharp.Processing.ResizeMode.Crop, Size = new SixLabors.ImageSharp.Size(128, 128) }));
+                image.Save(outStream, SixLabors.ImageSharp.Formats.Png.PngFormat.Instance);
+                var result = await _uploadService.UploadAsync(new UploadRequest(Guid.NewGuid().ToString() + ".png", UploadType.ProfilePicture, outStream.ToArray()));
+                model.ProfilePicture = result;
+                Snackbar.Add(L["The avatar has been updated."], MudBlazor.Severity.Info);
+
+            }
+        }
+    }
     async Task Submit()
     {
         try
