--- a/src/Blazor.Server.UI/Pages/Parents/Parents.razor
+++ b/src/Blazor.Server.UI/Pages/Parents/Parents.razor
@@ -202,15 +202,14 @@
         <PropertyColumn Property="x => x.Status" Title="@L[_currentDto.GetMemberDescription(x=>x.Status)]" />
         <PropertyColumn Property="x => x.Children" Title="@L[_currentDto.GetMemberDescription(x=>x.Children)]">
             <CellTemplate>
-                  <MudAvatarGroup Max="2" Spacing="3" MaxColor="Color.Primary">
-                    @foreach (var item in context.Item.Children)
-                    {
-                        <MudAvatar>
+                @foreach (var item in context.Item.Children)
+                {
+                   <MudTooltip Text="@item.DisplayName">
+                        <MudAvatar Size="Size.Small" Class="mr-2" >
                             <MudImage Src="@item.ProfilePicture"></MudImage>
                         </MudAvatar>
-                    }
-                </MudAvatarGroup>
-
+                  </MudTooltip>
+                }
             </CellTemplate>
         </PropertyColumn>
         @if (UserProfile.IsSuperAdmin)
@@ -321,7 +320,7 @@
 
     private async Task OnCreate()
     {
-        var command = new AddEditParentCommand() { ProfilePicture="/img/parents.jpg", TenantId=UserProfile.TenantId};
+        var command = new AddEditParentCommand() { ProfilePicture = "/img/parents.jpg", TenantId = UserProfile.TenantId, Status = "OK" };
         var parameters = new DialogParameters
             {
                 { nameof(_ParentFormDialog.UserProfile),UserProfile },
@@ -346,13 +345,12 @@
                 Phone = copyitem.Phone,
                 ProfilePicture = "/img/parents.jpg",
                 Status = "",
-                TenantId=copyitem.TenantId,
+                TenantId = copyitem.TenantId,
                 Description = copyitem.Description,
             };
         var parameters = new DialogParameters
             {
                 { nameof(_ParentFormDialog.UserProfile),UserProfile },
-                { nameof(_ParentFormDialog.model),command },
                 { nameof(_ParentFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
@@ -370,6 +368,7 @@
         var command = Mapper.Map<AddEditParentCommand>(dto);
         var parameters = new DialogParameters
             {
+                { nameof(_ParentFormDialog.UserProfile),UserProfile },
                 { nameof(_ParentFormDialog.model),command },
             };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
